// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table[Base] should render correctly  1`] = `
<div>
  <div
    class="c821uk1 soui-table-wrapper ccnx0qw soui-table-vertical-align-top c77v34v soui-table-default"
    dir="ltr"
  >
    <div
      class="c-y2i901 soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left cqo683m soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Marketing Designer
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Miami
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Financial Controller
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Development Lead
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Boston
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Developer
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about border 1`] = `
<div>
  <div
    class="c821uk1 soui-table-wrapper cyhy4a5 soui-table-bordered ccnx0qw soui-table-vertical-align-top c77v34v soui-table-default"
    dir="ltr"
  >
    <div
      class="c-y2i901 soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left cqo683m soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Marketing Designer
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Miami
            </td>
          </tr>
          <tr
            class="c-qkfxr5 soui-table-row-striped"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Financial Controller
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Development Lead
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Boston
            </td>
          </tr>
          <tr
            class="c-qkfxr5 soui-table-row-striped"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Developer
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about group 1`] = `
<div
  class="c821uk1 soui-table-wrapper cyhy4a5 soui-table-bordered ccnx0qw soui-table-vertical-align-top c77v34v soui-table-default"
  dir="ltr"
>
  <div
    class="c-y2i901 soui-table-body-wrapper"
  >
    <table>
      <colgroup>
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
      </colgroup>
      <thead>
        <tr>
          <th
            class="cpa13d4 soui-table-cell-align-left crbi3h7 soui-table-cell-group"
            colspan="3"
            dir="ltr"
            style="padding: 0px;"
          >
            <div>
              <span
                style="background: rgb(232, 235, 240); display: block; line-height: 40px; color: rgb(20, 23, 55);"
              >
                Name
              </span>
            </div>
          </th>
          <th
            class="cpa13d4 soui-table-cell-align-left"
            dir="ltr"
            rowspan="3"
          >
            <div
              class=""
            >
              <span>
                Country
              </span>
            </div>
          </th>
          <th
            class="cpa13d4 soui-table-cell-align-left cqo683m soui-table-cell-ignore-border crbi3h7 soui-table-cell-group"
            colspan="2"
            dir="ltr"
            style="padding: 0px;"
          >
            <div>
              <span>
                Other
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="cpa13d4 soui-table-cell-align-left crbi3h7 soui-table-cell-group"
            colspan="2"
            dir="ltr"
          >
            <div>
              True Name
            </div>
          </th>
          <th
            class="cpa13d4 soui-table-cell-align-left"
            dir="ltr"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Nick Name
              </span>
            </div>
          </th>
          <th
            class="cpa13d4 soui-table-cell-align-left"
            dir="ltr"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Office
              </span>
            </div>
          </th>
          <th
            class="cpa13d4 soui-table-cell-align-left cqo683m soui-table-cell-ignore-border"
            dir="ltr"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Position
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="cpa13d4 soui-table-cell-align-left"
            dir="ltr"
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                First Name
              </span>
            </div>
          </th>
          <th
            class="cpa13d4 soui-table-cell-align-left"
            dir="ltr"
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                Last Name
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Ephraim
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Wisozk
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Reunion
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Miami
          </td>
          <td
            class="cqo683m soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Marketing Designer
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Osvaldo
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Beer
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Syrian Arab Republic
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            San Paulo
          </td>
          <td
            class="cqo683m soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Financial Controller
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Dylan
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Ratke
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Boston
          </td>
          <td
            class="cqo683m soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Development Lead
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Shaniya
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Jacobs
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Chengdu
          </td>
          <td
            class="cqo683m soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Developer
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr />
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cuvzs0g soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c821uk1 soui-table-wrapper ccnx0qw soui-table-vertical-align-top c77v34v soui-table-default"
    dir="ltr"
  >
    <div
      class="c-y2i901 soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="cpa13d4 soui-table-cell-align-left cqo683m soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Marketing Designer
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Miami
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Financial Controller
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Development Lead
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Boston
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Developer
            </td>
            <td
              class="cqo683m soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr />
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;
